added target "reflashed"
git-svn-id: svn://svn.code.sf.net/p/ixo-jtag/code@7 16d96410-3d24-0410-b1d3-9a6b7672f313

--- a/usb_jtag/trunk/dev/f32x/Makefile
+++ b/usb_jtag/trunk/dev/f32x/Makefile
@@ -20,6 +20,11 @@ USB_CDC_UART.rel: USB_CDC_UART.c
 USB_Class_Requests.rel: USB_Class_Requests.c
 USB_Standard_Requests.rel: USB_Standard_Requests.c
 
+.PHONY: reflashed
+reflashed: $(MAIN.hex)
+	ec2writeflash --port=USB --hex $<
+	touch flashed
+
 flashed: $(MAIN).hex
 	ec2writeflash --port=USB --hex $<
 	touch $@
