Cleanup; writing to device works
git-svn-id: svn://svn.code.sf.net/p/ixo-jtag/code@15 16d96410-3d24-0410-b1d3-9a6b7672f313

--- a/usb_jtag/trunk/dev/f32x/Makefile
+++ b/usb_jtag/trunk/dev/f32x/Makefile
@@ -10,7 +10,7 @@ default: $(MAIN).hex
 .c.rel:
 	$(CC) -c $(CFLAGS) -o $@ $<
 
-$(MAIN).hex: $(MAIN).rel USB_Descriptor.rel USB_ISR.rel USB_Standard_Requests.rel USB_Class_Requests.rel USB_CDC_UART.rel SDCC_FIFO_RW.lib
+$(MAIN).hex: $(MAIN).rel USB_Descriptor.rel USB_ISR.rel USB_Standard_Requests.rel USB_Class_Requests.rel SDCC_FIFO_RW.lib
 	$(CC) $(CFLAGS) -o$@ $+
 
 $(MAIN).rel: $(MAIN).c
