--- a/usb_jtag/trunk/device/fx2/eeprom.c.dist
+++ b/usb_jtag/trunk/device/fx2/eeprom.c.dist
@@ -6,7 +6,7 @@
 // If you want to simulate the EEPROM attached to the FT245BM in the
 // device as Altera builds it, put something meaningful in here
 //-----------------------------------------------------------------------------
-// Copyright (C) 2005,2006 Kolja Waschk, ixo.de
+// Copyright (C) 2005..2007 Kolja Waschk, ixo.de
 //-----------------------------------------------------------------------------
 // This code is part of usbjtag. usbjtag is free software; you can redistribute
 // it and/or modify it under the terms of the GNU General Public License as
@@ -25,23 +25,23 @@
 
 const BYTE xdata PROM[128] = {
    0,0,
-   0,0,       /* Vendor ID */
-   0,0,       /* Product ID */
+   0xC0,0x16, /* Vendor ID 0x16C0 */
+   0xAD,0x06, /* Product ID 0x06AD */
    0x00,0x04, /* 0x400 indicates *BM device */
    0x80,      /* No remote wakeup, not self-powered */
    0x4B,      /* Need 2*75 mA max. */
    0x1C,0x00, /* Set USB version, use version string, enable suspend pulldowns */
    0x10,0x01, /* Support USB version 1.10 */
-   0x94,0x0E, /* Offset of the "Vendor" string (0x14) + 0x80, and length (14) */
+   0x94,0x0E, /* Offset of the "ixo.de" string (0x14) + 0x80, and length (14) */
    0xA2,0x18, /* Offset of the "USB-JTAG-IF" string (0x22) + 0x80, and length (24) */
    0xBA,0x12, /* Offset of the "00000000" serial string (0x3A) + 0x80, and length (18) */
-   0x0E,0x03,'V',0,'e',0,'n',0,'d',0,'o',0,'r',0, /* 14 Bytes: "Vendor" */
+   0x0E,0x03,'i',0,'x',0,'o',0,'.',0,'d',0,'e',0, /* 14 Bytes: "ixo.de" */
    0x18,0x03,'U',0,'S',0,'B',0,'-',0,'J',0,'T',0,'A',0,'G',0,'-',0,'I',0,'F',0, /* "USB-JTAG-IF" */
    0x12,0x03,'0',0,'0',0,'0',0,'0',0,'0',0,'0',0,'0',0,'0',0, /* 18 Bytes: "00000000" */
    1,2,3,1,0,0,0,0,
    0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
    0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
-   0x2C,0xEB /* WRONG! Checksum 0xEB2C */
+   0x08,0xA7 /* Checksum 0xA708 */
 };
 
 #endif
